# sschool2016

./: CMakeLists.txt  README.md
canny_filter/: CMakeLists.txt  canny_filter.cpp
convex_hull/: CMakeLists.txt  convex_hull.cpp
data/: test.mov
floating_filter/: CMakeLists.txt  floating_filter.cpp
image_processing/: CMakeLists.txt  improc.cpp
mouse_callback/: CMakeLists.txt  mouse_callback.cpp
subfilter/: CMakeLists.txt  subfilter.cpp
video_playback/: CMakeLists.txt  video_playback.cpp
